# present-value-calculator

./: Cargo.toml  README.md
src/: main.rs  tests.rs  utils.rs
src/models/: cash_flow.rs  mod.rs  requests.rs  responses.rs
